--- a/Style Library/app.css
+++ b/Style Library/app.css
@@ -14,40 +14,55 @@ body, html {
     display: none;
 }
 
-#o365cs-flexpane-overlay{
-    /*background-color: green;
-    position: absolute;
-    width: 100%;
-    top: 0;
-    height: 100%;
-    z-index: 1;*/
-}
-
-.btnLogin{
-    position: relative;
-    z-index: 5;
-}
-
 .searchCell-176{
     display: none;
 }
 
 #overlay {
-    position: fixed;
-    display: block;
     width: 100%;
     height: 100%;
+    line-height: 1;
+    position: fixed;
+    display: block;    
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: blue !important;
+    background: url("/sites/Lab02/SiteAssets/images/capa.png") no-repeat;
+    background-size: cover;
     z-index: 5;
-    cursor: pointer;
-  }
+}
 
-.logo{
-    background: url("./images/Logo_CBMM-03.png") no-repeat;
+#overlay h1{
+    font-size: 3.75rem;
+}
+
+#overlay p{
+    font-size: 2.5rem;
+}
+
+#overlay .content{
+    padding: 33.3% 0;
+}
+
+.btnLogin{
+    width: 181px;
+    height: 38px;
+    border-radius: 6px;
+    background-color: #8AA4AD;
+    position: relative;
+    z-index: 5;
+}
+
+.logoLandingPage{
+    width: 273px;
+    height: 51px;
+    background: url("/sites/Lab02/SiteAssets/images/LogoLandingPage.png") no-repeat;
+    display: inline-block;
+}
+
+.logoHeader{
+    background: url("/sites/Lab02/SiteAssets/images/Logo_CBMM-03.png") no-repeat;
     border-right: solid 2px white;
     padding-right: 20px;
     width: 136px;
