--- a/Style Library/app.css
+++ b/Style Library/app.css
@@ -10,14 +10,16 @@ body, html {
     font-size: 16px;
 }
 
-.headerRow-139{
-    display: none;
-}
-
 .searchCell-176{
     display: none;
 }
 
+/* Classes React*/
+.ms-SPLegacyFabricBlock .ms-Grid-row {
+    margin: 0 !important;
+}
+
+/* Landing Page */
 #overlay {
     width: 100%;
     height: 100%;
@@ -34,11 +36,11 @@ body, html {
 }
 
 #overlay h1{
-    font-size: 3.75rem;
+    font-size: 3.5rem;
 }
 
 #overlay p{
-    font-size: 1.8rem;
+    font-size: 1.65rem;
 }
 
 #overlay .content{
@@ -75,10 +77,16 @@ body, html {
     display: inline-block;
 }
 
+/* FINAL */
+
+/* Main */
+
+.header{
+    margin-left: 130px;
+}
+
 .logoHeader{
     background: url("/sites/Lab02/SiteAssets/images/Logo_CBMM-03.png") no-repeat;
-    border-right: solid 2px white;
-    padding-right: 20px;
     width: 136px;
     height: 22px;
     display: inline-block;
@@ -88,6 +96,7 @@ body, html {
     display: inline-block;
     padding-left: 15px;
     font-size: 1.5625em;
+    border-left: solid 2px white;
 }
 
 .root-139{
@@ -105,6 +114,8 @@ body, html {
 .w3-container, .w3-panel {
     padding: 0.01em 120px !important;
 }
+
+/* FINAL */
 
 .left-nav-toggle{
     width: 30px;
@@ -173,6 +184,15 @@ input:checked ~ label .hamburguer:after {
     bottom: 0;
 }
 
+.pageDescription{
+    text-align: center;
+}
+
+.w3-container div{
+    width: 100%;
+    border: solid 1px blue;
+}
+
 /* On screens that are 992px or less */
 @media screen and (max-width: 992px) {
     .w3-container, .w3-panel {
@@ -189,5 +209,22 @@ input:checked ~ label .hamburguer:after {
     
     #overlay p{
         font-size: 1rem;
+    }
+
+    /* Item nativo do menu superior*/
+    #O365_TopMenu{
+        display: none;
+    }
+
+    #webTitle {
+        display: none;
+    }
+
+    .logoHeader {
+        width: 120px;
+        height: 22px;
+        top: 15px;
+        right: 14px;
+        position: fixed;
     }
   }
