--- a/Style Library/sideNav.css
+++ b/Style Library/sideNav.css
@@ -2,28 +2,38 @@
     background-color: transparent !important;
 }
 
-.w3-bar .w3-bar-item{padding:8px 16px;float:left;width:auto;border:none;display:block;outline:0}
+.w3-bar .w3-bar-item{
+    padding:8px 16px;
+    float:left;
+    width:auto;
+    border:none;
+    display:block;
+    outline:0
+}
 
-.w3-sidebar{height:100%;width:320px;background-color:#505658;position:fixed!important;z-index:1;overflow:auto; display: none;}
 .w3-bar-block .w3-dropdown-hover,.w3-bar-block .w3-dropdown-click{width:100%}
 .w3-bar-block .w3-dropdown-hover .w3-dropdown-content,.w3-bar-block .w3-dropdown-click .w3-dropdown-content{min-width:100%}
 .w3-bar-block .w3-dropdown-hover .w3-button,.w3-bar-block .w3-dropdown-click .w3-button{width:100%;text-align:left;padding:8px 16px}
-.w3-btn,.w3-button{border:none;display:inline-block;padding:8px 16px;vertical-align:middle;overflow:hidden;text-decoration:none;color:inherit;background-color:inherit;text-align:center;cursor:pointer;white-space:nowrap}
 .w3-btn:hover{box-shadow:0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)}
 .w3-btn,.w3-button{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}   
 .w3-disabled,.w3-btn:disabled,.w3-button:disabled{cursor:not-allowed;opacity:0.3}.w3-disabled *,:disabled *{pointer-events:none}
 .w3-btn.w3-disabled:hover,.w3-btn:disabled:hover{box-shadow:none}
-.w3-dropdown-hover:hover > .w3-button:first-child,.w3-dropdown-click:hover > .w3-button:first-child{background-color:#ccc;color:#000}
-.w3-dropdown-hover.w3-mobile,.w3-dropdown-hover.w3-mobile .w3-btn,.w3-dropdown-hover.w3-mobile .w3-button,.w3-dropdown-click.w3-mobile,.w3-dropdown-click.w3-mobile .w3-btn,.w3-dropdown-click.w3-mobile .w3-button{width:100%}
-.w3-bar .w3-button{white-space:normal}
-.w3-button:hover{
-    color:#000!important;
-    background-color:#ccc!important
+
+.w3-dropdown-hover:hover > .w3-button:first-child,
+.w3-dropdown-click:hover > .w3-button:first-child{
+    background-color:#454A4B;
+    color:#000
 }
 
-.w3-xlarge{font-size:24px!important}
+.w3-dropdown-hover.w3-mobile,
+.w3-dropdown-hover.w3-mobile .w3-btn,
+.w3-dropdown-hover.w3-mobile .w3-button,
+.w3-dropdown-click.w3-mobile,
+.w3-dropdown-click.w3-mobile .w3-btn,
+.w3-dropdown-click.w3-mobile .w3-button{
+    width:100%
+}
 
-.w3-bar-block .w3-bar-item{width:100%;display:block;padding:8px 16px;text-align:left;border:none;white-space:normal;float:none;outline:0}
 .w3-bar-block.w3-center .w3-bar-item{text-align:center}.w3-block{display:block;width:100%}
 .w3-bar-item.w3-mobile,.w3-dropdown-hover.w3-mobile,.w3-dropdown-click.w3-mobile{text-align:center}
 
@@ -37,25 +47,27 @@
 .w3-cell-row:before,.w3-cell-row:after,.w3-clear:after,.w3-clear:before,.w3-bar:before,.w3-bar:after{content:"";display:table;clear:both}
 .w3-container,.w3-panel{padding:0.01em 16px}.w3-panel{margin-top:16px;margin-bottom:16px}
 
-.sideNav{
-    display: block !important;
-}
-
-._2kc0c9nP-qti6fefMCFonk {
+.w3-sidebar{
+    height:100%;
+    width:320px;
+    background-color:#505658;
+    position:fixed!important;
+    z-index:1;
+    overflow-y: scroll; 
+    overflow: -moz-scrollbars-none; /* Hide scrollbar for Firefox in old versions */
+    -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
     display: none;
-    font-size: initial;
-    border: solid 1px yellow;
-    float: left;
 }
 
-.btnOpenNav{
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 5;    
+/* Hide scrollbar for Chrome, Safari and Opera */
+.w3-sidebar::-webkit-scrollbar {
+    display: none;
+}
+
+.w3-btn,.w3-button, .btnOpenNav{
     border:none;
     display:inline-block;
-    padding:8px 16px;
+    padding:8px 0px;
     vertical-align:middle;
     overflow:hidden;
     text-decoration:none;
@@ -64,6 +76,82 @@
     text-align:center;
     cursor:pointer;
     white-space:nowrap
+}
+
+.sideNav{
+    display: block !important;
+}
+
+.sideNavLogo{
+    width: 136px;
+    height: 22px;
+    margin: 60px 0 35px 50px;
+    background: url("/sites/Lab02/SiteAssets/images/Logo_CBMM-03.png") no-repeat;
+    background-size: 75%;
+}
+
+.sideNav .ms-Icon {
+    color: #A9B7C6;
+    margin-right: 8px;
+}
+
+.sideNav ul{  
+    list-style-type: none;  
+    font-size: 1.3rem;
+    padding: 0;
+}
+
+.sideNavHeadLink{    
+    font-weight: bold;
+    padding-left: 50px;
+}
+
+.sideNavSubLink a, .sideNavLink{
+    font-weight: 100;
+    padding-left: 90px;
+}
+
+.sideNavLink{    
+    padding-left: 50px;
+}
+
+.spacer{
+    border-bottom: solid 1px;
+    margin: 30px 50px;
+}
+
+.w3-bar .w3-button{white-space:normal}
+
+.w3-button:hover{
+    background-color:#454A4B!important
+}
+
+.w3-xlarge{font-size:24px!important}
+
+.w3-bar-block .w3-bar-item{
+    width:100%;
+    display:block;
+    text-align:left;
+    border:none;
+    white-space:normal;
+    float:none;
+    outline:0
+}
+
+._2kc0c9nP-qti6fefMCFonk {
+    display: none;
+    font-size: initial;
+    /* border: solid 1px yellow; */
+    float: left;
+}
+
+.btnOpenNav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-left: 30px;
+    outline: none;
+    z-index: 5;    
 }
 
 .btnOpenNav:hover{
@@ -82,7 +170,6 @@
 
 .w3-transparent,.w3-hover-none:hover{background-color:transparent!important}
 .w3-hover-none:hover{box-shadow:none!important}
-
 
 @media (min-width:993px){.w3-modal-content{width:900px}.w3-hide-large{display:none!important}.w3-sidebar.w3-collapse{display:block!important}}
 @media (max-width:992px) and (min-width:601px){.w3-hide-medium{display:none!important}}
