--- a/Style Library/sideNav.css
+++ b/Style Library/sideNav.css
@@ -82,6 +82,10 @@
     display: block !important;
 }
 
+.sideNavBottom{
+    padding-bottom: 60px !important;
+}
+
 .sideNavLogo{
     width: 136px;
     height: 22px;
@@ -90,9 +94,11 @@
     background-size: 75%;
 }
 
-.sideNav .ms-Icon {
-    color: #A9B7C6;
-    margin-right: 8px;
+.sideNavIcons {
+    width: 27px;
+    height: 26px;
+    margin-right: 10px;
+    float: left;
 }
 
 .sideNav ul{  
@@ -101,23 +107,38 @@
     padding: 0;
 }
 
-.sideNavHeadLink{    
+.sideNavHeading{    
     font-weight: bold;
     padding-left: 50px;
 }
 
-.sideNavSubLink a, .sideNavLink{
+.favoriteIcon{
+    width: 24px;
+    height: 24px;
+}
+
+.sideNavSubLinks{
     font-weight: 100;
-    padding-left: 90px;
+    padding-top: 15px !important;
 }
 
-.sideNavLink{    
-    padding-left: 50px;
+.sideNavSubLinks a, .sideNavLinkBottom{
+    width: auto !important;
+    font-weight: 100;
+    padding-left: 126px;
 }
 
-.spacer{
+.sideNavLinkBottom{    
+    padding-left: 50px !important;
+}
+
+.spacerTop, .spacerBottom{
     border-bottom: solid 1px;
-    margin: 30px 50px;
+    margin: 30px 31px 30px 4px;
+}
+
+.spacerBottom{
+    margin-left: 54px;
 }
 
 .w3-bar .w3-button{white-space:normal}
