--- a/Style Library/app.css
+++ b/Style Library/app.css
@@ -196,9 +196,10 @@ input:checked ~ label .hamburguer:after {
     font-weight: 400;
 }
 
-.tile{
+.tileBox{
     width: 100%;
     height: 182px;
+    margin-bottom: 20px;
     font-size: 1.2rem;
     background: #2E2E2E url("/sites/Lab02/SiteAssets/images/bgTitle.png") no-repeat;
     background-size: cover;
@@ -206,43 +207,47 @@ input:checked ~ label .hamburguer:after {
     overflow: hidden;
 }
 
-.tileToolBar{
+.tileBoxOverlay{
+    background-color: #030303c2;
+}
+
+.tileBoxToolBar{
     height: 62px;
     width: 100%;
     text-align: right;
     margin-top: 20px;    
     padding-top: 15px;
-    background-color: #2E2E2E;
-    opacity: 0.7;
+    background-color: #2e2e2eba;
 }
 
-.tile .ms-Icon {
-    color: #A9B7C6;
+.tileBox .ms-Icon {
+    color: #6F848B;
 }
 
-.categoryDescription{
+.reportCategoryDescription{
     font-size: 1.43rem;
     padding-top: 15px;
 }
 
-.categoryIcon{
-    margin-top: 10px;
+.reportCategoryIcon{
+    width: 56px;
+    height: 56px;
+    margin-top: 20px;
+    margin-left: 5px;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
 }
 
-.categoryIcon .ms-Icon{
-    font-size: 3.5rem;    
-}
-
-.categoryInfo{
+.reportCategoryInfo{
     text-align: right;
     float: right;
 }
 
-.categoryInfo .ms-Icon{
+.reportCategoryInfo .ms-Icon{
     font-size: 1.5rem;    
 }
 
-.categoryType span{
+.reportCategoryType span{
     margin-left: 10px;
 }
 
@@ -258,7 +263,7 @@ input:checked ~ label .hamburguer:after {
 }
 
 .btnDashboard{
-    background-color: #A9B7C6;
+    background-color: #6F848B;
     border: none;
 }
 
@@ -291,10 +296,59 @@ input:checked ~ label .hamburguer:after {
     font-weight: 400;
 }
 
-.spaceBotton{
+.spaceBotton, .reportPage{
     padding-bottom: 50px !important;
 }
 
+.reportPage{
+    background-color: #EAEAEA;
+    text-align: center;
+}
+
+.reportBox{
+    max-width: 256px;
+}
+
+.reportDetailImage{
+    width: 100%;
+    height: 180px;
+    font-size: 1.2rem;
+    text-align: center;
+    background: #2E2E2E url(/sites/Lab02/SiteAssets/images/bgTitle.png) no-repeat;
+    background-size: cover;
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.reportDetailImage .ms-Grid-row{
+    padding-top: 40px !important;
+    padding-left: 34px;
+}
+
+.reportToolBar{
+    height: 62px;
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;    
+    padding-top: 15px;
+}
+
+.btnAddFavorites, .btnDashboard-Large{
+    width: 190px;
+    height: 32px;
+    color: #5C6F86;
+    background-color: #F6F6F6;
+    border: solid 1px #F6F6F6;
+    border-radius: 6px;  
+    cursor: pointer;  
+    outline: 0;
+}
+
+.btnDashboard-Large{
+    background-color: #6F848B;
+    color: #F6F6F6;
+    border: none;
+}
 
 /* On screens that are 992px or less */
 @media screen and (max-width: 992px) {
