--- a/Style Library/app.css
+++ b/Style Library/app.css
@@ -224,6 +224,14 @@ input:checked ~ label .hamburguer:after {
     color: #6F848B;
 }
 
+.categoryDescription{
+    border: solid 1px red;
+    width: 100% !important;
+    display: block;
+    position: absolute;
+    text-align: center;
+}
+
 .reportCategoryDescription{
     font-size: 1.43rem;
     padding-top: 15px;
@@ -252,8 +260,6 @@ input:checked ~ label .hamburguer:after {
 }
 
 .btnDetalhes, .btnDashboard{
-    width: 120px;
-    height: 32px;
     margin-right: 15px;
     background-color: transparent;
     border: solid 1px #fff;
@@ -265,6 +271,25 @@ input:checked ~ label .hamburguer:after {
 .btnDashboard{
     background-color: #6F848B;
     border: none;
+}
+
+.btnVoltar{
+    color: #fff;
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-left:5px;
+    text-decoration: none;
+}
+
+.tileBoxToolBar a{
+    width: 120px;
+    height: 32px;
+    color: #fff;
+    display: inline-block;
+    text-align: center;
+    line-height: 32px;
+    font-size: .875rem;
+    text-decoration: none;
 }
 
 .favoriteFilters{
