--- a/Style Library/app.css
+++ b/Style Library/app.css
@@ -208,6 +208,8 @@ input:checked ~ label .hamburguer:after {
 }
 
 .tileBoxOverlay{
+    width: 100%;
+    height: 100%;
     background-color: #030303c2;
 }
 
@@ -318,7 +320,7 @@ input:checked ~ label .hamburguer:after {
 }
 
 .detalhes span{
-    font-weight: 400;
+    font-weight: 600;
 }
 
 .spaceBotton, .reportPage{
@@ -330,7 +332,27 @@ input:checked ~ label .hamburguer:after {
     text-align: center;
 }
 
-.reportBox{
+.CanvasZoneContainer{
+    background-color: yellow !important;
+}
+
+.CanvasZone.CanvasZone--read {
+    padding: 0 !important;
+}
+
+.CanvasZone{
+    background-color: blueviolet !important;
+}
+
+.reportContainer{
+    width: 1260px;
+    height: 736px;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+}
+
+.reportDetailRightBox{
     max-width: 256px;
 }
 
@@ -350,7 +372,7 @@ input:checked ~ label .hamburguer:after {
     padding-left: 34px;
 }
 
-.reportToolBar{
+.reportDetailsToolBar{
     height: 62px;
     width: 100%;
     text-align: center;
@@ -358,9 +380,17 @@ input:checked ~ label .hamburguer:after {
     padding-top: 15px;
 }
 
-.btnAddFavorites, .btnDashboard-Large{
+.reportDetailsToolBar a {
     width: 190px;
     height: 32px;
+    display: inline-block;
+    text-align: center;
+    line-height: 32px;
+    font-size: .875rem;
+    text-decoration: none;
+}
+
+.btnAddFavorites, .btnDashboard-Large{
     color: #5C6F86;
     background-color: #F6F6F6;
     border: solid 1px #F6F6F6;
