--- a/Style Library/app.css
+++ b/Style Library/app.css
@@ -13,6 +13,13 @@ body, html {
     color: #FFFFFF !important;
 }
 
+/* Oculta o menu padrão do Office 365 no canto superior esquerdo */
+/* Observar trecho comentado na linha 45 do arquivo Main.tsx
+Utilizar aquele trecho caso o nome dessa classe seja alterado*/
+._2kc0c9nP-qti6fefMCFonk{
+    display: none !important;
+}
+
 /* Barra de comentários em páginas modernas (Social Media Tools) */
 [data-sp-feature-tag='Comments']{
     display: none;
@@ -57,7 +64,7 @@ body, html {
     left: 0;
     right: 0;
     bottom: 0;
-    background: url("/sites/bienterprise/SiteAssets/images/capa.jpg") no-repeat;
+    background: url("/sites/lab02/SiteAssets/images/capa.jpg") no-repeat;
     background-size: cover;
     z-index: 5;
 }
@@ -78,7 +85,7 @@ body, html {
 .logoLandingPage{
     width: 273px;
     height: 51px;
-    background: url("/sites/bienterprise/SiteAssets/images/LogoLandingPage.png") no-repeat;
+    background: url("/sites/lab02/SiteAssets/images/LogoLandingPage.png") no-repeat;
     margin-bottom: 30px;
     display: inline-block;
 }
@@ -94,7 +101,7 @@ body, html {
 .logoHeader{
     width: 136px;
     height: 22px;
-    background: url("/sites/bienterprise/SiteAssets/images/Logo_CBMM-03.png") no-repeat;    
+    background: url("/sites/lab02/SiteAssets/images/Logo_CBMM-03.png") no-repeat;    
     display: inline-block;
 }
 
@@ -207,7 +214,7 @@ body, html {
     color: #6F848B;
 }
 
-.reportCategoryDescription{
+.reportTitle{
     font-size: 1.43rem;
     padding-top: 15px;
 }
@@ -250,7 +257,7 @@ body, html {
     width: 100%;
     height: 100%;
     text-align: center;
-    background: url(/sites/bienterprise/SiteAssets/images/icons/downloadCheck.png) no-repeat center 50px;
+    background: url(/sites/lab02/SiteAssets/images/icons/downloadCheck.png) no-repeat center 50px;
     margin: 10px;
     padding: 5px;
 }
@@ -276,23 +283,33 @@ body, html {
 }
 
 .iconType{
-    background: url(/sites/bienterprise/SiteAssets/images/icons/dashboard.png) left center no-repeat;
+    background: url(/sites/lab02/SiteAssets/images/icons/dashboard.png) left center no-repeat;
 }
 
 .downloadIconType{
-    background: url(/sites/bienterprise/SiteAssets/images/icons/file.png) left center no-repeat;
+    background: url(/sites/lab02/SiteAssets/images/icons/file.png) left center no-repeat;
 }
 
 .iconType span, .downloadIconType span{
     margin-left: 34px !important;
 }
 
-.favoriteIcon{
+.btnFavorite{
     width: 27px;
     height: 26px;
     margin-bottom: 8px;
-    background: url(/sites/bienterprise/SiteAssets/images/icons/favStarOutline.png) left center no-repeat;
     display: inline-flex;
+    border: none;
+    cursor: pointer;
+    outline: 0;
+}
+
+.btnFavorite-icon-outline{
+    background: url(/sites/lab02/SiteAssets/images/icons/favStarOutline.png) left center no-repeat;
+}
+
+.btnFavorite-icon-filled{
+    background: url(/sites/lab02/SiteAssets/images/icons/favStarFill.png) left center no-repeat;
 }
 
 .reportCategoryType span, .downloadType{
@@ -336,22 +353,22 @@ body, html {
 
 .btnLogin-Icon, .btnDetalhes-Icon, .btnDashboard-Icon, .btnDownload-Icon{
     width: 21px;
-    background: url('/sites/bienterprise/SiteAssets/images/icons/info.png') no-repeat center;
+    background: url('/sites/lab02/SiteAssets/images/icons/info.png') no-repeat center;
     display: inherit;
 }
 
 .btnDashboard-Icon{
-    background: url('/sites/bienterprise/SiteAssets/images/icons/rightArrow.png') no-repeat center;
+    background: url('/sites/lab02/SiteAssets/images/icons/rightArrow.png') no-repeat center;
 }
 
 .btnDownload-Icon{
     width: 24px;
-    background: url('/sites/bienterprise/SiteAssets/images/icons/download.png') no-repeat center;
+    background: url('/sites/lab02/SiteAssets/images/icons/download.png') no-repeat center;
 }
 
 .btnLogin-Icon{
     height: 24px;
-    background: url('/sites/bienterprise/SiteAssets/images/icons/login.png') no-repeat center;
+    background: url('/sites/lab02/SiteAssets/images/icons/login.png') no-repeat center;
 }
 
 .btnVoltar{
@@ -421,7 +438,7 @@ body, html {
     height: 180px;
     font-size: 1.2rem;
     text-align: center;
-    background: #2E2E2E url(/sites/bienterprise/SiteAssets/images/bgTitle.png) no-repeat;
+    background: #2E2E2E url(/sites/lab02/SiteAssets/images/bgTitle.png) no-repeat;
     background-size: cover;
     border-radius: 6px;
     overflow: hidden;
@@ -469,7 +486,7 @@ body, html {
     width: 42px;
     height: 42px;
     margin-top: 36px;
-    background: url(/sites/bienterprise/SiteAssets/images/BR-flag-round.png) center center no-repeat;
+    background: url(/sites/lab02/SiteAssets/images/BR-flag-round.png) center center no-repeat;
     background-size: 100% !important;
     border: none;
     outline: none;
@@ -477,7 +494,7 @@ body, html {
 }
 
 .btnTranslateEN, .btnTranslateEN-small{    
-    background: url(/sites/bienterprise/SiteAssets/images/USA-flag-round.png) center center no-repeat;
+    background: url(/sites/lab02/SiteAssets/images/USA-flag-round.png) center center no-repeat;
     margin-left: 16px;
 }
 
