Adicionar e remover favoritos finalizado

--- a/Style Library/app.css
+++ b/Style Library/app.css
@@ -195,6 +195,10 @@ Utilizar aquele trecho caso o nome dessa classe seja alterado*/
     overflow: hidden;
 }
 
+.hiddenReportTileBox{
+    display: none;
+}
+
 .tileBoxOverlay{
     width: 100%;
     height: 100%;
