--- a/Style Library/sideNav.css
+++ b/Style Library/sideNav.css
@@ -170,7 +170,12 @@
     left: 0;
     padding-left: 30px;
     outline: none;
-    z-index: 5;    
+    z-index: 5;  
+    visibility: hidden;
+}
+
+.btnOpenNav-visble{
+    visibility: visible !important;
 }
 
 .btnOpenNav:hover{
